--- a/about.qmd
+++ b/about.qmd
@@ -1,9 +1,11 @@
 ---
-title: "About"
+title: "Sobre o curso"
+lang: pt-br
 ---
 
-About this site
+## Onde serão as aulas?
 
-```{r}
-1 + 1
-```
+As aulas se darão a partir de um modelo híbrido. Algumas aulas serão presenciais
+e outras serão realizadas através de videoconferências em plataformas online.
+
+## Quantas aulas serão realizadas?
