adicionar mais alguns slides na aula 2

--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ subtitle: "Aplicações em ciências da saúde"
 author: "Bruno Montezano"
 institute: "UFRGS"
 description: "Curso voltado para desenvolvimento de habilidades de manipulação e análise de dados em R para pesquisadores da área da saúde"
-abstract: "O curso/workshop será dividido em cinco aulas, com exercícios para aplicação dos conceitos aprendidos. Conhecimento básico de estatística e experiência prévia em análise de dados é desejável, mas não obrigatório. Os participantes devem ter conhecimento básico de informática."
+abstract: "O curso/workshop será dividido em sete aulas, com exercícios para aplicação dos conceitos aprendidos. Conhecimento básico de estatística e experiência prévia em análise de dados é desejável, mas não obrigatório. Os participantes devem ter conhecimento básico de informática."
 date: last-modified
 image: assets/r_logo.png
 lang: pt-br
@@ -96,4 +96,4 @@ o *An Introduction to Statistical Learning*, mas trabalha mais conceitos estatí
   - [Código para gerar os slides da Aula 1: R e RStudio](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/semana_1/semana_1_r_e_rstudio.qmd)
 
 * [Slides da Aula 2: Fundamentos de estatística em R](slides/semana_2/semana_2_fundamentos_de_estatistica_em_r.html)
-  - [Código para gerar os slides da Aula 1: R e RStudio](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/semana_2/semana_2_fundamentos_de_estatistica_em_r.qmd)
+  - [Código para gerar os slides da Aula 2: Fundamentos de estatística em R](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/semana_2/semana_2_fundamentos_de_estatistica_em_r.qmd)
