--- a/slides/semana_1/semana_1_r_e_rstudio.qmd
+++ b/slides/semana_1/semana_1_r_e_rstudio.qmd
@@ -67,8 +67,10 @@ Se algo não estiver funcionado no site, me enviem um email!
 1. R e RStudio
 2. Fundamentos de estatística no R
 3. Distribuições e associações
-4. Inferência estatística
-5. Modelos lineares
+4. Visualização de dados
+5. Inferência estatística
+6. Modelos lineares
+7. Modelos lineares generalizados
 
 ## Por que aprender análise quantitativa de dados?
 
